--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -10,8 +10,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -19,11 +22,15 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
-    "react-native-screens": "^4.13.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-screens": "^4.14.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
+  },
+  "overrides": {
+    "@react-native-async-storage/async-storage": "^1.22.0"
   },
   "private": true
 }
