--- a/backend_server/requirements.txt
+++ b/backend_server/requirements.txt
@@ -1,6 +1,9 @@
-Flask==3.0.0
+Flask==2.3.2
 python-dotenv==1.0.0
 requests==2.31.0
 flask-cors==6.0.1
 sentence-transformers==5.1.0
 chromadb==1.0.16
+Flask-JWT-Extended==4.4.4
+Flask-SQLAlchemy==3.0.3
+passlib[bcrypt]==1.7.4
