--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.14.0",
     "react-native-vector-icons": "^10.3.0",
