--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.25",
     "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-camera": "16.1.11",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "metro-react-native-babel-preset": "^0.77.0",
