--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
@@ -22,8 +23,9 @@
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.14.0",
     "react-native-svg": "^15.12.1",
