--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "^4.14.0",
     "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "0.4.1"
+    "react-native-worklets": "0.4.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
