--- a/backend_server/requirements.txt
+++ b/backend_server/requirements.txt
@@ -8,3 +8,9 @@ passlib[bcrypt]==1.7.4
 gunicorn==20.1.0
 chromadb==1.0.16
 Flask-Migrate
+eventlet
+socketio
+celery==5.5.3
+gunicorn
+redis
+flask_socketio==5.3.7
