--- a/backend_server/requirements.txt
+++ b/backend_server/requirements.txt
@@ -7,10 +7,8 @@ Flask-SQLAlchemy==3.0.3
 passlib[bcrypt]==1.7.4
 gunicorn==20.1.0
 chromadb==1.0.16
-Flask-Migrate
-eventlet
-socketio
+Flask-Migrate==4.1.0
 celery==5.5.3
-gunicorn
-redis
+redis>=6.0.0
 flask_socketio==5.3.7
+gevent==25.5.1
