Fix back buttons and add product search page

--- a/SupplementApp/app.json
+++ b/SupplementApp/app.json
@@ -35,6 +35,6 @@
         "projectId": "d9769eb5-54a1-409a-99d7-dbada7276fbf"
       }
     },
-    "owner": "testbuilder142"
+    "owner": "bluezone"
   }
 }
