--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -20,6 +20,7 @@
     "expo": "~53.0.20",
     "expo-camera": "16.1.11",
     "expo-font": "~13.3.2",
+    "expo-image": "^3.0.10",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "metro-react-native-babel-preset": "^0.77.0",
