--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "expo": "~53.0.20",
     "expo-camera": "16.1.11",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-image": "^3.0.10",
     "expo-linear-gradient": "^14.1.5",
