--- a/SupplementApp/package.json
+++ b/SupplementApp/package.json
@@ -22,16 +22,20 @@
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-image": "^3.0.10",
+    "expo-intent-launcher": "~12.1.5",
     "expo-linear-gradient": "^14.1.5",
+    "expo-linking": "~7.1.7",
     "expo-status-bar": "~2.2.3",
     "metro-react-native-babel-preset": "^0.77.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "6.7.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-tab-view": "^4.2.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
